# BD2_Pokemon

./: CMakeLists.txt  README.md  script.sh
src/: main.cpp
src/Entity/: BasicBehaviour.hpp  Player.cpp
src/Entity/header/: Player.hpp  Tile.hpp
src/GUI/: Button.hpp  TextZone.hpp
src/Scenes/Headers/: DAvl.hpp  DBTree.hpp  DExtendible.hpp  SceneCredits.hpp  SceneDocumen.hpp  SceneMainMenu.hpp  SceneStructuresDocumen.cpp  SceneStructuresVisualize.cpp  SceneVisualize.hpp  SimpleScene.hpp  VAvl.hpp  VBTree.hpp  VExtendible.hpp
src/Util/: SceneManager.hpp
src/proxy/: apple_store_record.hpp  main.cpp  proxy.cpp  proxy.hpp  write_dat.cpp
src/proxy/data/: AppleStore_app_name.avl  AppleStore_id.avl  AppleStore_price.avl  AppleStore_prime_genre.avl
src/structures/avl/: avl.hpp  node.hpp  testavl.cpp  utils.hpp
structures/avl/: avl.hpp  main.cpp  script.zsh  utils.hpp
structures/bplus/: a.out  bplus.hpp  bplusT.cpp  bplustxt.cpp  run.sh  test.cpp
test/: a.R  a.out  b+.cpp  b+.hpp  back2me.cpp  main.cpp  notas.txt  records.txt  run.sh  try.cpp  usefull_structs.cpp  usefull_structs.hpp
