cmake_minimum_required(VERSION 3.23)
project(BD2_Project)

# Generate compile_commands.json
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Dependencies
set(RAYLIB_VERSION 4.5.0)
find_package(raylib ${RAYLIB_VERSION} QUIET) # QUIET or REQUIRED
if (NOT raylib_FOUND) # If there's none, fetch and build raylib
    include(FetchContent)
    FetchContent_Declare(
            raylib
            DOWNLOAD_EXTRACT_TIMESTAMP OFF
            URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
    )
    FetchContent_GetProperties(raylib)
    if (NOT raylib_POPULATED) # Have we downloaded raylib yet?
        set(FETCHCONTENT_QUIET NO)
        FetchContent_Populate(raylib)
        set(BUILD_EXAMPLES OFF CACHE BOOL "" FORCE) # don't build the supplied examples
        add_subdirectory(${raylib_SOURCE_DIR} ${raylib_BINARY_DIR})
    endif()
endif()

# Our Project

add_executable(${PROJECT_NAME}
        src/main.cpp
        src/main.cpp
        src/Util/GUIManager.hpp
        src/Util/SceneManager.hpp
        src/Scenes/Scenes.hpp
        src/GUI/Button.hpp
        src/Entity/Player.cpp
        src/Entity/header/Player.hpp
        src/Entity/BasicBehaviour.hpp
        src/Scenes/Headers/SceneMainMenu.hpp
        src/Scenes/Headers/SimpleScene.hpp

        src/Scenes/Headers/SceneCredits.hpp

        src/Scenes/Headers/SceneVisualize.hpp
        src/Scenes/Headers/SceneStructuresVisualize.cpp
        src/Scenes/Headers/VAvl.hpp
        src/Scenes/Headers/VBTree.hpp
        src/Scenes/Headers/VExtendible.hpp

        src/Scenes/Headers/SceneDocumen.hpp
        src/Scenes/Headers/SceneStructuresDocumen.cpp
        src/Scenes/Headers/DAvl.hpp
        src/Scenes/Headers/DBTree.hpp
        src/Scenes/Headers/DExtendible.hpp
        )
#set(raylib_VERBOSE 1)
target_link_libraries(${PROJECT_NAME} raylib)

# Web Configurations
if (${PLATFORM} STREQUAL "Web")
    # Tell Emscripten to build an example.html file.
    set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html")
endif()

# Checks if OSX and links appropriate frameworks (Only required on MacOS)
if (APPLE)
    target_link_libraries(${PROJECT_NAME} "-framework IOKit")
    target_link_libraries(${PROJECT_NAME} "-framework Cocoa")
    target_link_libraries(${PROJECT_NAME} "-framework OpenGL")
endif()